# qingyun_aiLearn

./: .gitignore  LICENSE  README.md  青云智学-Sprint8-后端开发文档.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260710_add_agent_tables.py  20260711_add_note_organize_fields.py  20260711_change_embedding_dim_to_512.py  20260715_add_agent_visibility.py  20260716_add_notebook_tables.py  5fe73777a71e_initial_schema.py  c0826ebcce52_add_note_id_to_lectures.py  ff551d88ddc7_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: llm_client.py  llm_router.py
backend/app/api/: deps.py
backend/app/core/: cancel_token.py  exceptions.py  middleware.py  security.py  utils.py
backend/app/models/: __init__.py  agent_message.py  agent_session.py  auth.py  knowledge.py  learning.py  memory.py  note.py  notebook.py  rag.py  review.py  tag.py  user.py
backend/app/schemas/: agent.py  common.py  knowledge.py  learning.py  note.py  notebook.py  qa.py  review.py  user.py
backend/app/services/: auth_service.py  graph_db.py  knowledge_service.py  learning_service.py  note_service.py  notebook_service.py  qa_service.py  review_service.py  search_service.py  user_memory_service.py
backend/app/tasks/: agent_tasks.py  celery_app.py  (+4 more)
backend/logs/: celery.pid  uvicorn.pid
backend/nginx/: entrypoint.sh  nginx.conf
backend/scripts/: generate-secrets.sh  init-db.sql
backend/secrets/: .gitkeep
backend/tests/: conftest.py
(+116 files in other folders)
