[project]
name = "qingyun-zhixue"
version = "0.1.0"
description = "青云智学 - AI驱动的全流程学习辅助软件后端"
requires-python = ">=3.11"

dependencies = [
    # Web框架
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",

    # 数据库
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",

    # Redis & 任务队列
    "redis>=5.0",
    "celery[redis]>=5.4",

    # AI/LLM
    "openai>=1.30",
    "sentence-transformers>=3.0",

    # 搜索
    "meilisearch>=0.31",

    # 网络检索
    "trafilatura>=1.9",
    "httpx>=0.27",

    # 工具
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "structlog>=24.1",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
